--- a/logs.html
+++ b/logs.html
@@ -50,6 +50,59 @@
 					</ul>
 				</section>
 
+                                <section data-transition="slide" data-background="#007777" data-background-transition="slide">
+                                  <h2>Approche traditionnelle</h2>
+                                  <pre><code data-trim contenteditable style="font-size: 18px; margin-top: 20px;">
+&lt;barbu&gt; @all, vous pouvez nettoyer les logs dans ~/tomcat/stuff/logs
+&lt;barbu&gt; on a une critical
+&lt;dev&gt;   hmmk, je regarde
+                                  </code></pre>  
+                                </section>
+
+                                <section data-transition="slide" data-background="#007777" data-background-transition="slide">
+                                  <h2>Pourquoi on parle peu des logs</h2>
+                                  <ul>
+                                    <li>Pas exactement glamour</li>
+                                    <li>Difficile à vendre aux clients, et donc au management</li>
+                                  </ul>
+                                </section>
+
+                                <section data-transition="slide" data-background="#007777" data-background-transition="slide">
+                                  <h2>Pourquoi il faudrait en parler</h2>
+                                  <ul>
+                                    <li>Connaissance de l'usage d'une application</li>
+                                    <li>Connaissance de l'usage d'une plateforme</li>
+                                    <li>Détection d'anomalies</li>
+                                    <li>Et bien sûr debuggage</li>
+                                  </ul>
+                                </section>
+ 
+                                <section data-transition="slide" data-background="#007777" data-background-transition="slide">
+                                  <h2>Ce qu'on attend d'un système de logs</h2>
+                                  <ul>
+                                    <li>Normalisation des messages</li>
+                                    <li>Accessiblité des messages</li>
+                                    <li>Simplification de la recherche d'information</li>
+                                  </ul>
+                                </section> 
+
+                                <section data-transition="slide" data-background="#007777" data-background-transition="slide">
+                                  <h2>Ce qu'on n'attend pas forcément d'un système de logs</h2>
+                                  <ul>
+                                    <li>Archivage pour raison légales</li>
+                                    <li>Stockage infini de fichiers</li>
+                                  </ul>
+                                </section>                                  
+
+                                <section data-transition="slide" data-background="#007777" data-background-transition="slide">
+                                  <h2>Mais qu'est qu'une log ?</h2>
+                                  <ul>
+                                    <li>Un message émis par l'application (donc par un développeur)</li>
+                                    <li>Qui / Quand / Où / Quoi</li>
+                                    <li>Base commune à tous les systèmes que l'on va voir</li> 
+                                  </ul>
+                                </section>
+     
 				<section data-transition="slide" data-background="#4d7e65" data-background-transition="slide">
 					<h1>Logger en java</h1>
 				</section>
